force-app/main/default/objects/Test_Drive__c/fields/Drivers_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Drivers_License_Number__c</fullName>
    <label>Drivers License Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>