force-app/main/default/objects/Test_Drive__c/fields/DurationInMinutes__c.field-meta.xml
<CustomField>
    <fullName>DurationInMinutes__c</fullName>
    <label>Duration In Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>