force-app/main/default/objects/Test_Drive__c/fields/LeadNotConverted__c.field-meta.xml
<CustomField>
    <fullName>LeadNotConverted__c</fullName>
    <formula>IF(AND( ISPICKVAL(Test_Drive_Status__c, &apos;Completed&apos;),(Lead__r.IsConverted = false) ,( NOW() -  LastModifiedDate  &gt;= 0)),TRUE,FALSE)</formula>
    <label>LeadNotConverted</label>
    <type>Checkbox</type>
</CustomField>