force-app/main/default/objects/Test_Drive__c/validationRules/Required_Fields_For_CompletedStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Fields_For_CompletedStatus</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Test_Drive_Status__c, &quot;Completed&quot;),
    OR(
        ISBLANK(Drivers_License_Number__c),
        ISBLANK(Test_ride_executive_s_Name__c),
        NOT(Indemnity__c)
    )
)</errorConditionFormula>
    <errorMessage>You must provide a valid driving license, executive name, and check the indemnity box before marking the status as &apos;Completed&apos;.</errorMessage>
</ValidationRule>