force-app/main/default/objects/Test_Drive__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Phone__c</columns>
    <columns>Test_Drive_Date__c</columns>
    <columns>Ride_Type__c</columns>
    <columns>Drivers_License_Number__c</columns>
    <columns>Indemnity__c</columns>
    <columns>Feedback__c</columns>
    <columns>Test_Drive_Outcome__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Test_Ride_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>