force-app/main/default/objects/Test_Drive__c/listViews/Lead_List_View.listView-meta.xml
<ListView>
    <fullName>Lead_List_View</fullName>
    <columns>NAME</columns>
    <columns>Indemnity__c</columns>
    <columns>Drivers_License_Number__c</columns>
    <columns>Feedback__c</columns>
    <filterScope>Mine</filterScope>
    <label>List View</label>
</ListView>