force-app/main/default/objects/Test_Drive__c/listViews/Out_of_Business_Hours_Test_Drive.listView-meta.xml
<ListView>
    <fullName>Out_of_Business_Hours_Test_Drive</fullName>
    <filterScope>Queue</filterScope>
    <label>Out of Business Hours</label>
    <queue>Out_of_Business_Hours</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>