force-app/main/default/objects/Test_Drive__c/listViews/X291001_Sales_Team_Test_Drive.listView-meta.xml
<ListView>
    <fullName>X291001_Sales_Team_Test_Drive</fullName>
    <filterScope>Queue</filterScope>
    <label>291001 Sales Team</label>
    <queue>X291001_Sales_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>